--- a/backend/package.json
+++ b/backend/package.json
@@ -19,12 +19,14 @@
     "axios": "^1.7.2",
     "bottleneck": "^2.19.5",
     "cheerio": "^1.0.0-rc.12",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-rate-limit": "^7.3.1",
     "express-session": "^1.18.0",
     "express-sessions": "^1.0.6",
     "mongodb": "^6.8.0",
+    "mongoose": "^8.4.4",
     "morgan": "^1.10.0",
     "node-binance-api": "^0.13.1",
     "node-cron": "^3.0.3",
@@ -37,12 +39,14 @@
     "yahoo-finance2": "^2.11.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/jest": "^29.5.12",
     "@types/morgan": "^1.9.9",
     "@types/passport": "^1.0.16",
     "@types/supertest": "^6.0.2",
+    "@types/ws": "^8.5.10",
     "jest": "^29.7.0",
     "nodemon": "^3.1.3",
     "supertest": "^7.0.0",
